# intuitive-openstack-manager

./: .env.example  BACKLOG.md  DESIGN.md  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/: schemas.py
src/intuitive_openstack_manager/: main.py  openstack_client.py  schemas.py  settings.py
tests/: conftest.py  test_api.py
