[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "intuitive-openstack-manager"
version = "0.1.0"
description = "Proof-of-concept REST API for managing OpenStack virtual machine lifecycles."
readme = "README.md"
requires-python = ">=3.14"
keywords = ["openstack", "vm", "api", "fastapi"]
license = { text = "MIT" }

dependencies = [
  "fastapi>=0.95.0",
  "uvicorn[standard]>=0.23.0",
  "pydantic>=2.5.0",
  "pydantic-settings>=2.2.0",
  "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "httpx>=0.24.0",
  "pytest-cov>=4.0.0",
  "codecov>=2.1.13",
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q --cov=intuitive_openstack_manager --cov-report=xml"
testpaths = ["tests"]
